cabal-version:      2.4
name:               myconcurrency
version:            0.1.0.0

author:             Samuel Pullely
maintainer:         pullelys@student.ethz.ch

common shared-properties
    default-language: Haskell2010
    ghc-options:      -Wall

library
    import:           shared-properties
    exposed-modules:  MyLib
    build-depends:    base ^>=4.14.3.0
    hs-source-dirs:   src

executable myconcurrency
    import:           shared-properties
    main-is:          Main.hs
    build-depends:
        base ^>=4.14.3.0,
        myconcurrency
    
    hs-source-dirs:   app
